# coat-check

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
doc/: Makefile  README.md  data.gv
src/: file_syscalls.rs  fork_syscalls.rs  hasher.rs  lib.rs  main.rs  server.rs  signal_syscalls.rs
tests/: common.rs  file_syscall_tests.rs  hasher_test.rs  server_tests.rs
tests/.cargo/: config.toml
